# agent_practice

./: .gitignore  pyproject.toml
openai_development.egg-info/: MyInfo.txt  PKG-INFO  Practice2.ipynb  SOURCES.txt  Test.ipynb  requires.txt
